--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="site-header">
       <h1>Jam Box Studios</h1>
       <a href="#main-content" class="skiplink">Skip to main content</a>
-      <div class="main-nav">
-        <ul role="navigation">
+      <div class="main-nav" role="navigation">
+        <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">Reservation</a></li>
